   http://www.fudgemsg.org/
   
This software is licensed under the Apache Public License, version 2.0.
For more information, please see the LICENSE.txt file contained in
this distribution.

Version 0.4
===========
This release contains major API changes.
The aim is to get as many breaking changes out of the way now.
The wire protocol is unchanged.

- Move code to new package structure.
  This minimizes the top package to avoid overwhelming users at first glance
  Creation of wire package structure for lower level detail
  Rename taxon to taxonomy

- Create FudgeWireType
  Move wire types to new package under new superclass
  This allows certain places in the API to specifically require a wire type

- Add EncodedFudgeMsg
  This allows a Fudge message to be stored and processed while still encoded

- Changed IndicatorType from singleton to enum singleton

- Move API to using Integer rather than Short for ordinals

- Unify all methods on name-ordinal-type-value argument ordering

- Rename classes
   FudgeMessageFactory to FudgeMsgFactory
   FudgeMsg to StandardFudgeMsg
   FudgeMsgBase to AbstractFudgeMsg
   FudgeFieldContainer to FudgeMsg
   MutableFudgeFieldContainer to MutableFudgeMsg
   FudgeMsgField to UnmodifiableFudgeField
   ImmutableFudgeMsg to UnmodifiableFudgeMsg
   ImmutableFudgeContext to UnmodifiableFudgeContext
   ImmutableFudgeTypeDictionary to UnmodifiableFudgeTypeDictionary
   ImmutableFudgeBuilderFactory to UnmodifiableFudgeBuilderFactory
   ImmutableFudgeObjectDictionary to UnmodifiableFudgeObjectDictionary
   AlternativeFudgeStreamWriter to EventBasedFudgeStreamWriter

- Remove classes
   ImmutableFudgeFieldContainer

- Change constructors
   UnmodifiableFudgeMsg (parameter order)
   UnmodifiableFudgeField (use factories)

- Rename methods
   FudgeSerializationContext.objectToFudgeMsg* -> addToMessage*

- FudgeStreamWriter
  Changed to accept an Iterable of FudgeField rather than just a Fudge message
